# MyBrain

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.kb/: config.yaml
kb-skill/: SKILL.md
kb-skill/agents/: openai.yaml
kb-skill/references/: cli-reference.md
kb-skill/workflows/: ingest-article.md  ingest-thought.md  maintain.md  opportunistic-capture.md  query.md
kb_cli/: __init__.py  cli.py
kb_core/: __init__.py  errors.py  git_repo.py  index_engine.py  lock.py  maintainer.py  models.py  normalizer.py  project.py  raw_store.py  renderer.py  schema_store.py  services.py  wiki_store.py
kb_core/templates/: base.html  style.css
raw/articles/: src_20260617_ehuczv.md
schema/: categories.md  conventions.md  workflows.md
scripts/: install  kb  update
wiki/: index.md  log.md
wiki/entities/: claude-agent-sdk.md  coding-agent.md  feature-list.md  initializer-agent.md  long-running-agents.md
wiki/summaries/: src_20260617_ehuczv.md
wiki/topics/: agent-长任务工程化.md  ai-编码-agent-验证.md  跨会话交接协议.md
